# cast_slotmap

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: any_haver.rs  backend.rs  cast_box.rs  cast_key.rs  cast_map.rs  dense_cast_map.rs  dyn_key.rs  lib.rs  map_id.rs  retype_ptr.rs  slotmap_trait.rs  tests.rs  type_tagged_ptr.rs  unsafe_cast_map.rs  unsafe_dense_cast_map.rs
